[gd_scene load_steps=3 format=3 uid="uid://ck0eonug6qjrp"]

[ext_resource type="Script" uid="uid://b6us27v7vcvdx" path="res://Scripts/UI/interaction_ui.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dwoicfo2rmhxr" path="res://Scenes/UI/interaction_panel.tscn" id="2"]

[node name="InteractionUI" type="CanvasLayer"]
script = ExtResource("1")

[node name="InteractionPanel" parent="." instance=ExtResource("2")]
offset_right = 890.0

[node name="InteractionPrompt" type="Label" parent="."]
offset_left = 500.0
offset_top = 400.0
offset_right = 650.0
offset_bottom = 430.0
text = "[E] Interact"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MinimapContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_right = -10.0
offset_bottom = 200.0
grow_horizontal = 0
